--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -11,9 +11,16 @@ git clone https://github.com/hayguen/srds-tools.git
 cd srds-tools
 mkdir build
 cd build
+
+# one of following
 cmake --config Release ../src                                 # for installation in /usr/local/bin - requires root privileges!
 cmake --config Release -DCMAKE_INSTALL_PREFIX=$HOME ../src    # for installation in $HOME/bin - you'll need to add to your PATH
-make
-sudo make install   # for installation in /usr/local
-make install        # for installation in $HOME
 
+# one of following
+make
+cmake --build .     # if not using make
+sudo make install   # for installation in /usr/local
+
+# one of following
+make install        # for installation in $HOME
+cmake --build . --target install  # if not using make
